--- a/form/index.html
+++ b/form/index.html
@@ -5,10 +5,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../src/style.css">
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <form id="todoForm">
+      <div class="title">
+        <label for="title">Title:</label>
+        <input type="text" id="title" required>
+      </div>
+      <div class="completed">
+        <label for="completed">Completed:</label>
+        <input type="checkbox" id="completed">
+      </div>
+      <div class="due__date">
+        <label for="dueDate">Due Date:</label>
+        <input type="date" id="dueDate">
+      </div>
+      <div class="priority">
+        <label for="priority">Priority:</label>
+        <select id="priority">
+          <option value="low">Low</option>
+          <option value="medium">Medium</option>
+          <option value="high">High</option>
+        </select>
+      </div>
+      <div class="notes">
+        <label for="notes">Notes:</label>
+        <textarea id="notes"></textarea>
+      </div>
+      <div class="submit">
+        <button class="btn" id="submitButton" type="submit">Add Todo</button>
+      </div>
+    </form>
+  </div>
   <script type="module" src="./todoForm.ts"></script>
 </body>
 
