--- a/list/index.html
+++ b/list/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Todo List</title>
   <script type="module" src="./todoList.ts"></script>
+  <link rel="stylesheet" href="../src/style.css">
 </head>
 
 <body>
