--- a/list/index.html
+++ b/list/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+  <div id="nav">
+    <a href="../index.html">Home</a>
+    <a href="../form/index.html">Create New Todo</a>
+    <a href="../list/index.html">View Todo List</a>
+  </div>
   <div id="app"></div>
 </body>
 
