--- a/form/index.html
+++ b/form/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <div id="nav">
+    <a href="../index.html">Home</a>
+    <a href="../form/index.html">Create New Todo</a>
+    <a href="../list/index.html">View Todo List</a>
+  </div>
   <div id="app">
     <form id="todoForm">
       <div class="title">
