--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-  <div id="app">
-    <a href="./form/index.html">Create New Todo</a>
+  <div id="nav">
+    <a href="../index.html">Home</a>
+    <a href="../form/index.html">Create New Todo</a>
+    <a href="../list/index.html">View Todo List</a>
   </div>
+  <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
